# hackmd-data-pipeline

./: .gitignore  README.md  build_lambda.sh  build_lambda_old.sh  env.example  pyproject.toml
.github/workflows/: deploy-lambda.yml
config/: config.yaml
infra/: template.yaml
lambda_handlers/: fetch_handler.py  test_handler.py
lambda_handlers/collector/: collector_handler.py
lambda_handlers/etl/: etl_handler.py
lambda_handlers/test/: test_pg_handler.py  test_s3_handler.py
src/core/: config.py  db.py  pg_engine.py
src/etl/: arxiv_etl.py
src/extract/: arxiv_collector.py  test_lambda.py
src/metrics/: metrics_server.py
src/utils/initial/: create_bucket.py  create_table.sql  initial.py
tests/: test.ipynb
tests/arxiv_data/: arxiv_batch_1.json  arxiv_batch_2.json  arxiv_batch_3.json  arxiv_batch_4.json  arxiv_batch_5.json
